--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
             <div class="btns">
                 <button class="btn1" id="btn">POPULATION</button><button class="btn2" id="btn">LANGUAGES</button>
             </div>
-            <p>10 Most spoken languages in the world</p>
+            <p class="most">10 MOST SPOKEN LANGUAGES IN THE WORLD</p>
         </div>
         <div class="data">
             <div class="countries"></div>
+            <div class="chat_data">
+                <div class="chat"></div>
+            </div>
+            <div class="number"></div>
         </div>
     </main>
     <script src="./main.js"></script>
