--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="data">
             <div class="countries"></div>
             <div class="chat_data">
-                <div class="chat"></div>
+                <!-- <div class="chat"></div> -->
             </div>
             <div class="number"></div>
         </div>
