--- a/index.html
+++ b/index.html
@@ -19,12 +19,7 @@
             </div>
             <p class="most">10 MOST SPOKEN LANGUAGES IN THE WORLD</p>
         </div>
-        <div class="data">
-            <div class="countries"></div>
-            <div class="chat_data">
-                <div class="chat"></div>
-            </div>
-            <div class="number"></div>
+        <div class="wrapper">
         </div>
     </main>
     <script src="./main.js"></script>
